--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,21 +40,21 @@
                 <p>Completá el formulario y nos comunicaremos a la brevedad.</p>
             </div>
             <div class="form">
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Nombre:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                <div>
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" id="nombre">
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Apellido:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                <div>
+                    <label for="apellido" >Apellido:</label>
+                    <input type="text" id="apellido">
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="name@example.com">
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Comentario:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <div>
+                    <label for="comentario">Comentario:</label>
+                    <textarea id="comentario" ></textarea>
                 </div>
     
                 <button class="btn">Enviar</button>
